--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,3 @@
-@import "../node_modules/@syncfusion/ej2-base/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-buttons/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-calendars/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-dropdowns/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-inputs/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-navigations/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-popups/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-react-schedule/styles/material.css";
-
-
 .time-input {
     display: flex;
     align-items: center;
@@ -80,7 +70,7 @@
     display: flex;
     height: 60vh; /* 100% of the viewport height */
     gap:100px;
-    align-items:  end;
+    align-items: flex-end;
     justify-content: center;
   }
   
@@ -104,8 +94,8 @@
     
     display:flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: start;
+    justify-content: flex-start;
+    align-items: flex-start;
     padding:10px;
   }
   .buttonIcon h1{
