--- a/src/Components/Calendar.css
+++ b/src/Components/Calendar.css
@@ -163,7 +163,7 @@
   .react-calendar--selectRange .react-calendar__tile--hover {
     background-color: #e6e6e6;
   }
-  /*
+  
   .highlight1 { 
     background: linear-gradient(to bottom, transparent 80%, #f08080 80%);
   }
@@ -188,7 +188,7 @@
   
   .react-calendar__tile--active.highlight2 {
     background: linear-gradient(to bottom, #006edc 80%, #30bf99 80%);
-  }*/
+  }
 
   .tile{
     position:absolute;
@@ -197,7 +197,7 @@
     border-radius: 20px;
     z-index: 100;
     color:white;
-    background-color:rgb(0,0,0)
+    background-color:rgb(100,0,0)
   }
 
   
